Use a variable user name instead of a secret

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
-      - run: docker build -t ${{ secrets.DOCKER_USERNAME }}/react-test -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true ${{ secrets.DOCKER_USERNAME }}/react-test npm test
+      - run: docker login -u $DOCKER_USERNAME -p "${{ secrets.DOCKER_PASSWORD }}"
+      - run: docker build -t $DOCKER_USERNAME/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true $DOCKER_USERNAME/react-test npm test
