--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: docker login -u ${{ var.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
-      - run: docker build -t ${{ var.DOCKER_USERNAME }}/react-test -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true ${{ var.DOCKER_USERNAME }}/react-test npm test
+      - run: docker login -u ${{ vars.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
+      - run: docker build -t ${{ vars.DOCKER_USERNAME }}/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true ${{ vars.DOCKER_USERNAME }}/react-test npm test
