--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,3 +12,14 @@ jobs:
       - run: docker login -u ${{ vars.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
       - run: docker build -t ${{ vars.DOCKER_USERNAME }}/react-test -f ./client/Dockerfile.dev ./client
       - run: docker run -e CI=true ${{ vars.DOCKER_USERNAME }}/react-test npm test
+
+      - run: docker build -t ${{ vars.DOCKER_USERNAME }}/multi-client ./client
+      - run: docker build -t ${{ vars.DOCKER_USERNAME }}/multi-nginx ./nginx
+      - run: docker build -t ${{ vars.DOCKER_USERNAME }}/multi-server ./server
+      - run: docker build -t ${{ vars.DOCKER_USERNAME }}/multi-worker ./worker
+
+      - run: docker push ${{ vars.DOCKER_USERNAME }}/multi-client
+      - run: docker push ${{ vars.DOCKER_USERNAME }}/multi-nginx
+      - run: docker push ${{ vars.DOCKER_USERNAME }}/multi-server
+      - run: docker push ${{ vars.DOCKER_USERNAME }}/multi-worker
+      
